[package]
name = "narthex_engine_trait"
version = "0.1.0"
edition = "2018"
authors = ["Martin <m.e@acm.org>"]
description = "Shared code (trait) for portable apps"
readme = "README.md"
repository = "https://github.com/martinellison/narthex-engine-trait"
license = "MPL-2.0"
keywords = ["portable", "cross-platform"]
publish = true


[dependencies]
anyhow = "1.0.43"
serde = {version = "1.0.130", features = ["derive"] } 
serde_json = "1.0.67"
strum = { version = "0.21.0", features = ["derive"] }

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
